--- a/index.html
+++ b/index.html
@@ -7,115 +7,72 @@
 <link href="style.css" rel="stylesheet">
 <link rel="icon" href="icon.svg" type="image/svg+xml">
 <header>
-  <h1>
-    <a href="#home">
-      <img id="logo" src="./img/1.png">
-    </a>
-  </h1>
-  <nav style="font-family: Mondwest">
-    <a href="#now">Now</a>
-    <a href="#music">Music</a>
-    <a href="#radio">Radio</a>
-    <a href="#garden">Garden</a>
-    <a href="https://github.com/zschaffer">Code</a>
-  </nav>
+    <h1>
+        <a href="#home">
+            <img id="logo" src="./img/3.png">
+        </a>
+    </h1>
+    <nav style="font-family: Mondwest">
+        <a href="#now">Now</a>
+        <a href="#audio">Audio</a>
+        <a href="#visual">Visual</a>
+        <a href="#radio">Radio</a>
+        <a href="https://github.com/zschaffer">Code</a>
+    </nav>
 </header>
 <section id="home">
-  <h2>Zane Schaffer</h2>
-  <p>Former musician, future programmer, presently here.</p>
-  <!-- <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I -->
-  <!--   hope putting time into this site will give me the motivation to write more, share more, and be more open.</p> -->
-
-  <br>
-  <h2>CV</h2>
-  <p>Campaign Specialist @ Cox Automotive</p>
-  <ul>
-    <li>Built promotional pages for dealerships across the country</li>
-    <li>Won company hackathon with code generation tool</li>
-  </ul>
-  <br>
-  <p>Front End Web Developer @ Zoe Bios Creative</p>
-  <ul>
-    <li>Created a bespoke Shopify theme for client</li>
-    <li>Built Shopify apps using NodeJS</li>
-  </ul>
-  <br>
-  <p>Event Coordinator @ Perfumerie</p>
-  <ul>
-    <li>Orchestrated events with high-end perfumers</li>
-    <li>Gave educational briefings to customers</li>
-  </ul>
-  <br>
-  <p>Musician @ Zane Schaffer</p>
-  <ul>
-    <li>Played shows and festivals in America and Europe</li>
-    <li>Amassed over thirty million streams online</li>
-  </ul>
-  <br>
-  <h2>Contact</h2>
-  <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on
-    <a href="https://tilde.chat">irc.tilde.chat</a>.
-  </p>
+    <h2>Zane Schaffer</h2>
+    <p>Former musician, future programmer, presently here.</p>
+    <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I
+      hope putting time into this site will give me the motivation to write more, share more, and be more open.</p>
+    <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on
+        <a href="https://tilde.chat">irc.tilde.chat</a>.
+    </p>
 </section>
 <section id="now">
-  <h2>What Am I Doing Now?</h2>
-  <p>I am currently learning more about embedded systems,
-    how they interact, and how they communicate inside.
-    I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a>
-    reading endless manpages and tinkering with SBC's.</p>
-  <br>
-  <p>I've lost the motivation and free time to create and lately I only listen.
-    To make up for this - I'm starting to curate a reviewed
-    and detailed listing of what I'm playing.</p>
+    <h2>What Am I Doing Now?</h2>
+    <p>I am currently learning more about embedded systems,
+        how they interact, and how they communicate inside.
+        I've been focusing on <a href="https://github.com/zschaffer/wax.git">making things in C/C++</a>
+        reading endless manpages and tinkering with SBC's.</p>
+    <br>
+    <p>I've lost the motivation and free time to create and lately I only listen.
+        To make up for this - I'm starting to curate a reviewed
+        and detailed listing of what I'm playing.</p>
 </section>
-<section id="music">
-  <h2>My Music</h2>
-  <p>It's been a while since I've released music - my released songs can be found at:
-    <br>
-    <br>
-    <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
-      href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
-    <br>
-    <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
-      href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
-  </p>
+<section id="audio">
+    <h2>Audio Experiments</h2>
+    <p>It's been a while since I've released music - my released songs can be found at:
+        <br>
+        <br>
+        <a href="https://open.spotify.com/artist/1stp6XCHbjsyVmOYGyYBuz">Spotify</a> & <a
+            href="https://zaneschaffer.bandcamp.com">Bandcamp</a>
+        <br>
+        <a href="https://music.apple.com/us/artist/zane-schaffer/1325257694">Apple Music</a> & <a
+            href="https://soundcloud.com/zaneschaffer">Soundcloud</a>
+    </p>
 </section>
 <section id="radio">
-  <h2>Radio Streaming</h2>
-  <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
-    streaming music live,
-    Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
-  <p>
-  <h3>Archives</h3>
-  <p><a href="./archive/2022_11_21.mp3">2022/11/21</a></p>
-  <p><a href="./archive/2022_11_23.mp3">2022/11/23</a></p>
-  <p><a href="./archive/2022_11_28.mp3">2022/11/28</a></p>
-  <p><a href="./archive/2022_11_30.mp3">2022/11/30_1</a></p>
-  <p><a href="./archive/2022_11_30.mp3">2022/11/30_2</a></p>
+    <h2>Radio Streaming</h2>
+    <p>I don't make much music these days.. Yet I try to stay active in other ways. For instance, you can find me
+        streaming music live,
+        Mondays, Wednesdays, and Fridays 11:00am PST at <a href="https://tilderadio.org">tilderadio</a>.</p>
+    <p>
+    <h3>Archives</h3>
+    <p><a href="./archive/2022_11_21.mp3">2022/11/21</a></p>
+    <p><a href="./archive/2022_11_23.mp3">2022/11/23</a></p>
+    <p><a href="./archive/2022_11_28.mp3">2022/11/28</a></p>
+    <p><a href="./archive/2022_11_30.mp3">2022/11/30_1</a></p>
+    <p><a href="./archive/2022_11_30.mp3">2022/11/30_2</a></p>
 
 </section>
-<section id="garden">
-    <h2>My Garden</h2>
+<section id="visual">
+    <h2>Visual Memories</h2>
     <div class="grid">
-        <a><img loading="lazy" src="img/1.png"></a>
-        <a><img loading="lazy" src="img/2.png"></a>
-        <a><img loading="lazy" src="img/3.png"></a>
-        <a><img loading="lazy" src="img/4.png"></a>
-        <a><img loading="lazy" src="img/6.png"></a>
-        <a><img loading="lazy" src="img/7.png"></a>
-        <a><img loading="lazy" src="img/8.png"></a>
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/4.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/6.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/7.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/8.png">
+        <img alt="dithered image of a staircase at the Performing Arts Forum in France" loading="lazy" src="img/paf.png">
     </div>
-</section>
-<section id="aotw">
-  <h2>Album Of The Week</h2>
-  <p>This is an attempt to catalog my goal of listening to a full new album a week.</p>
-  <div class="grid">
-    <a>
-      <img loading="lazy" class="cover" alt="[44] Dauwd - Theory Of Colours" title="[44] Dauwd - Theory Of Colours"
-        src="img/44_cover.avif"></a>
-    <a><img loading="lazy" class="cover" alt="[45] Alternate Current - Fresh Scars From Old Wounds"
-        title="[45] Alternate Current - Fresh Scars From Old Wounds" src="img/45_cover.avif"></a>
-    <a><img loading="lazy" class="cover" alt="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002"
-        title="[46] Ryoji Ikeda, Mika Vainio & Alva Noto - Live 2002" src="img/46_cover.avif"></a>
-  </div>
 </section>
