houston... we're pixeled now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
     <h1>
         <a href="#home">
-            <img id="logo" src="./img/3.png">
+            <img id="logo" src="./img/paf.png">
         </a>
     </h1>
     <nav style="font-family: Mondwest">
@@ -17,15 +17,19 @@
         <a href="#audio">Audio</a>
         <a href="#visual">Visual</a>
         <a href="#radio">Radio</a>
+        <!-- <a href="#text">Text</a> -->
         <a href="https://github.com/zschaffer">Code</a>
     </nav>
 </header>
-<section id="home">
+<section style="display: flex; flex-direction: column;" id="home">
     <h2>Zane Schaffer</h2>
     <p>Former musician, future programmer, presently here.</p>
-    <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better at. I
-      hope putting time into this site will give me the motivation to write more, share more, and be more open.</p>
-    <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing zane on
+    <p>Never been a natural at writing blog posts or documenting my interests - It's something I wish to get better
+        at. I
+        hope putting time into this site will give me the motivation to write more, share more, and be more open.
+    </p>
+    <p>You can reach me slowly via <a href="mailto:personal.zane@gmail.com">my email inbox</a> or by PRIVMSG'ing
+        zane on
         <a href="https://tilde.chat">irc.tilde.chat</a>.
     </p>
 </section>
@@ -69,10 +73,21 @@
 <section id="visual">
     <h2>Visual Memories</h2>
     <div class="grid">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/4.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/6.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/7.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy" src="img/8.png">
-        <img alt="dithered image of a staircase at the Performing Arts Forum in France" loading="lazy" src="img/paf.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
+            src="img/4.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
+            src="img/6.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
+            src="img/7.png">
+        <img loading="lazy" src="img/tile.png">
+        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
+            src="img/8.png">
+        <img alt="dithered image of a staircase at the Performing Arts Forum in France" loading="lazy"
+            src="img/paf.png">
     </div>
+</section>
+<section id="text">
+    <h2>Musings</h2>
+    <p></p>
+
 </section>
