--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
 <section id="visual">
     <h2>Visual Memories</h2>
     <div class="grid">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
-            src="img/4.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
-            src="img/6.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
-            src="img/7.png">
-        <img loading="lazy" src="img/tile.png">
-        <img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington" loading="lazy"
-            src="img/8.png">
-        <img alt="dithered image of a staircase at the Performing Arts Forum in France" loading="lazy"
-            src="img/paf.png">
+        <a href="img/4.png"><img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington"
+                loading="lazy" src="img/4.png"></a>
+        <a href="img/6.png"><img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington"
+                loading="lazy" src="img/6.png"></a>
+        <a href="img/7.png"><img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington"
+                loading="lazy" src="img/7.png"></a>
+        <a href="img/tile.png"><img loading="lazy" src="img/tile.png"></a>
+        <a href="img/8.png"><img alt="dithered image of a plant at the Kubota Japanese Gardens in Seattle, Washington"
+                loading="lazy" src="img/8.png"></a>
+        <a href="img/paf.png"><img alt="dithered image of a staircase at the Performing Arts Forum in France"
+                loading="lazy" src="img/paf.png"></a>
     </div>
 </section>
 <section id="text">
