--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="me" href="https://tilde.zone/@zane" />
 <link href="style.css" rel="stylesheet">
-<link rel="icon" href="icon.svg" type="image/svg+xml">
+<link rel="icon" href="icon.png" type="image/png" > 
 <header>
     <h1>
         <a href="#home">
