add new archive

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <p><a href="./archive/2022_11_28.mp3">2022/11/28</a></p>
     <p><a href="./archive/2022_11_30.mp3">2022/11/30_1</a></p>
     <p><a href="./archive/2022_11_30.mp3">2022/11/30_2</a></p>
+    <p><a href="./archive/2022_12_02.mp3">2022/12/02</a></p>
 
 </section>
 <section id="visual">
